NXP-20934: don't let DefaultCommandTester leave processes around