@@ -23,7 +23,9 @@
 package org.nuxeo.ecm.platform.commandline.executor.service.cmdtesters;
 
 import java.io.IOException;
+import java.io.InputStream;
 
+import org.nuxeo.common.utils.ExceptionUtils;
 import org.nuxeo.ecm.platform.commandline.executor.service.CommandLineDescriptor;
 
 /**
@@ -40,7 +42,23 @@ public class DefaultCommandTester implements CommandTester {
         String params = cmdDescriptor.getTestParametersString();
         String[] cmdWithParams = (cmd + " " + params).split(" ");
         try {
-            Runtime.getRuntime().exec(cmdWithParams);
+            ProcessBuilder builder = new ProcessBuilder(cmdWithParams);
+            // make sure we have only one InputStream to read to avoid parallelism/deadlock issues
+            builder.redirectErrorStream(true);
+            Process process = builder.start();
+            // close process input immediately
+            process.getOutputStream().close();
+            // consume all process output
+            try (InputStream in = process.getInputStream()) {
+                byte[] bytes = new byte[4096];
+                while (in.read(bytes) != -1) {
+                    // loop
+                }
+            }
+            // wait for process termination
+            process.waitFor();
+        } catch (InterruptedException e) {
+            ExceptionUtils.checkInterrupt(e);
         } catch (IOException e) {
             return new CommandTestResult(
                     "command " + cmd + " not found in system path (descriptor " + cmdDescriptor + ")");
